--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -61,8 +61,8 @@
                 <h1> Get in touch with us</h1>
                 <p> Contact Us for more information about our services.</p>
                 <div class="contact-row">
-                    <div class="Email"> <p> support@hello</p> </div>
-                    <div class="phone"> <p>(123) 456-7890 </p> </div>
+                    <div class="Email"> <p> medicalSuppliesmore@gmail.com </p> </div>
+                    <div class="phone"> <p> 504 3140-9282 </p> </div>
                 </div>
             <div class="form-wrapper">
             <div class="name-box">
