made it look better for phone

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -61,7 +61,8 @@
                 <h1> Get in touch with us</h1>
                 <p> Contact Us for more information about our services.</p>
                 <div class="contact-row">
-                    <div class="Email"> <p> medicalSuppliesmore@gmail.com </p> </div>
+                    <div class="Email"> <p> MedicalSuppliesMore@gmail.com </p> </div>
+                    <p> - </p>
                     <div class="phone"> <p> 504 3140-9282 </p> </div>
                 </div>
             <div class="form-wrapper">
