--- a/index.html
+++ b/index.html
@@ -1,147 +1,155 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MedicalSupplies.com</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="pretty.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Medical Supplies and more</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-
-<!-- Language Switch Buttons -->
-<div class="navbar">
-    <button onclick="setLanguage('en')">English</button>
-    <button onclick="setLanguage('es')">Español</button>
-</div>
-
-<!-- Header -->
-<div class="header-picture">
-    <img src="ship.webp" alt="Ship picture">
-
-    <div class="header-title">
-        <h1 class="lang en">Medical Supplies and More</h1>
-        <h1 class="lang es" style="display:none;">Suministros Médicos y Más</h1>
-
+    <!-- HERO SECTION-->
+     <div class="Logo"> 
+        <h3> Medical Supplies and More </h3> 
     </div>
-</div>
 
+    <div class="hero-header-section">
+        <div class="hero-text-action-section">
+            <h2>Logistics and Medical Supplies from USA to Honduras</h2>
+        </div>
+        <div class="hero-text-call-to-action-section">
+            <p> Get a quoute now </p>
+            <button> Get quoute </button>
+        </div>
+    </div>
+    <!-- End of HERO SECTION-->
 
+    <!-- SERVICES SECTION-->
+    <div class ="services-section">
+        <div class = "services-text-section">
+            <h1> Complete Logistics Solutions </h1>
+            <p> From pickup in the USA to delivery in Honduras, we handle every aspect of your shipment with professional care and attention to detail.</p>
+        </div>
 
-<!-- Learn More Section -->
-<div class="LearnWrapper">
-    <h1 class="lang en">Learn More about us</h1>
-    <h1 class="lang es" style="display:none;">Aprende más sobre nosotros</h1>
+        <div class="grid-services-section">
 
-    <p class="lang en">
-        At Medical Supplies and More, we focus on providing businesses with high-quality medical supplies. Whether you need surgical instruments, diagnostic tools, or personal protective equipment, our dedicated team is here to facilitate your logistics needs efficiently. Experience seamless supply chain solutions with us.
-    </p>
-    <p class="lang es" style="display:none;">
-        En Medical Supplies and More, nos enfocamos en proporcionar a las empresas suministros médicos de alta calidad. Ya sea que necesite instrumentos quirúrgicos, herramientas de diagnóstico o equipo de protección personal, nuestro equipo dedicado está aquí para facilitar sus necesidades logísticas de manera eficiente. Experimente soluciones de cadena de suministro sin interrupciones con nosotros.
-    </p>
-</div>
-
-<!-- Supply Sourcing -->
-<div class="SupplySourcing">
-    <h1 class="lang en">Supply Sourcing</h1>
-    <h1 class="lang es" style="display:none;">Abastecimiento de Suministros</h1>
-
-    <p class="lang en">
-        Leveraging our extensive network and industry expertise, we conduct thorough sourcing of medical supplies tailored to your specific requirements, ensuring you receive the best products for your healthcare needs.
-    </p>
-    <p class="lang es" style="display:none;">
-        Aprovechando nuestra amplia red y experiencia en la industria, realizamos un abastecimiento exhaustivo de suministros médicos adaptados a sus requisitos específicos, asegurando que reciba los mejores productos para sus necesidades de atención médica.
-    </p>
-</div>
-
-<!-- Expert Support -->
-<div class="ExpertSupport">
-    <h1 class="lang en">Expert Support</h1>
-    <h1 class="lang es" style="display:none;">Soporte Experto</h1>
-
-    <p class="lang en">
-        Our knowledgeable logistics professionals provide personalized support throughout the entire process, from product selection to delivery, ensuring a smooth and efficient experience for your business.
-    </p>
-    <p class="lang es" style="display:none;">
-        Nuestros experimentados profesionales en logística brindan soporte personalizado durante todo el proceso, desde la selección del producto hasta la entrega, garantizando una experiencia fluida y eficiente para su negocio.
-    </p>
-</div>
-
-<!-- Quality Assurance -->
-<div class="QualityAssurance">
-    <h1 class="lang en">Quality Assurance</h1>
-    <h1 class="lang es" style="display:none;">Garantía de Calidad</h1>
-
-    <p class="lang en">
-        At Medical Supplies and More, we prioritize quality in our offerings, providing rigorous assessments and certifications to ensure that all supplies meet the highest industry standards. Trust us to support your medical supply needs with reliability.
-    </p>
-    <p class="lang es" style="display:none;">
-        En Medical Supplies and More, priorizamos la calidad en nuestras ofertas, realizando evaluaciones y certificaciones rigurosas para garantizar que todos los suministros cumplan con los más altos estándares de la industria. Confíe en nosotros para satisfacer sus necesidades de suministros médicos con fiabilidad.
-    </p>
-</div>
-
-<!-- Contact Section -->
-<div class="center-contact">
-    <div class="ContactUs">
-        <div class="contactText">
-            <h1 class="lang en">Get in touch with us</h1>
-            <h1 class="lang es" style="display:none;">Ponte en contacto con nosotros</h1>
-
-            <p class="lang en">Contact us for more information about our services.</p>
-            <p class="lang es" style="display:none;">Contáctanos para más información sobre nuestros servicios.</p>
-
-            <div class="contact-row">
-                <div class="Email"><p>MedicalSuppliesMore@gmail.com</p></div>
-                <p> - </p>
-                <div class="phone"><p>504 3140-9282</p></div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                </div>
             </div>
 
-            <div class="form-wrapper">
-                <div class="name-box">
-                    <p class="lang en">Name</p>
-                    <p class="lang es" style="display:none;">Nombre</p>
-                    <input type="text" id="Name" class="text-input" placeholder="Your Name here">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
                 </div>
-                <div class="Email-box">
-                    <p class="lang en">Email</p>
-                    <p class="lang es" style="display:none;">Correo Electrónico</p>
-                    <input type="text" id="Email" class="text-input" placeholder="Your Email here">
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
                 </div>
-                <div class="Message-wrapper">
-                    <p class="lang en">Message</p>
-                    <p class="lang es" style="display:none;">Mensaje</p>
-                    <textarea class="Message-box"></textarea>
-                </div>
-                <div class="send-message-box">
-                    <button type="button" class="lang en">Send Message</button>
-                    <button type="button" class="lang es" style="display:none;">Enviar Mensaje</button>
+            </div>            
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="center-picture">
-        <img src="export.jpg">
-    </div>
-</div>
 
-<!-- Language Switch Script -->
-<script>
-function setLanguage(lang) {
-    localStorage.setItem('preferredLanguage', lang);
-    document.querySelectorAll('.lang').forEach(el => {
-        el.style.display = el.classList.contains(lang) ? '' : 'none';
-    });
-}
+        <div class="why-us-section">
+            <div class="why-us-services-section">
 
-document.addEventListener('DOMContentLoaded', () => {
-    const savedLang = localStorage.getItem('preferredLanguage') || 'en';
-    setLanguage(savedLang);
-});
-</script>
+            </div>
+
+            <div class="why-us-pic">
+
+            </div>
+        </div>
+    </div> 
+        <!-- END OF SERVICES SECTION-->
+
+        <!-- Medical Supplies-->
+        <div class="medical-supplies">
+            <div class="medical-supplies-title"></div>
+            <div class="medical-supplies-grid"></div>
+            <div class="why-choose-us-medical-supplies"></div>
+        </div>
+        <!-- End of Medical Supplies-->
+
+        <!-- Call to Action -->
+        <div class ="call-to-action">
+            <div class="call-to-action-title">
+                <h2> Ready to get started? </h2>
+                <p> Contact us today for a free quote and personalized assistance with your logistics needs. </p>
+            </div>
+        <div class ="call-to-action-information">
+            <div class="quote-card">
+                <h2>Request a Quote</h2>
+                <form>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Full Name *</label>
+                            <input type="text" />
+                        </div>
+                        <div class="form-group">
+                            <label>Email Address *</label>
+                            <input type="email" />
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Company Name</label>
+                            <input type="text" />
+                        </div>
+                        <div class="form-group">
+                            <label>Phone Number *</label>
+                            <input type="tel" />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Message *</label>
+                        <textarea placeholder="Please describe your shipping needs..." required></textarea>
+                    </div>
+
+                    <button type="submit">Send Quote Request</button>
+                </form>
+            </div>
+            <div class ="get-in-touch">
+                <div class ="get-in-touch-card">
+                    <h3> Business Hours</h3>
+                    <p> Mon-Fri: 8AM-6PM EST <br> 24/7 Emergency suppport</p>
+                </div>
+                <div class ="get-in-touch-card">
+                    <h3> Business Hours</h3>
+                    <p> Mon-Fri: 8AM-6PM EST <br> 24/7 Emergency suppport</p>
+                </div>
+                <div class ="get-in-touch-card">
+                    <h3> Business Hours</h3>
+                    <p> Mon-Fri: 8AM-6PM EST <br> 24/7 Emergency suppport</p>
+                </div>
+                <div class ="get-in-touch-card">
+                    <h3> Business Hours</h3>
+                    <p> Mon-Fri: 8AM-6PM EST <br> 24/7 Emergency suppport</p>
+                </div>
+            </div>
+        </div>
+        
+
+        <!-- End of call to action-->
+
+        <!-- Footer -->
+
+        </div>
 
 </body>
 </html>
