--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- HERO SECTION-->
 <div class="header">
   <div class="logo">
-    <h3>Medical Supplies and More</h3>
+    <h1>Medical Supplies and More</h1>
   </div>
   <div class="header-right">
     <button class="lang-switcher">EN|ES</button>
@@ -265,16 +265,16 @@
             </div>
             <div class ="get-in-touch">
                <div class ="get-in-touch-card">
-                  <h3> Business Hours</h3>
-                  <p> Mon-Fri: 8AM-6PM EST <br> 24/7 Emergency suppport</p>
+                  <h3> Phone</h3>
+                  <p> +1 786 623 7965 <br> +504-3140-9282 </p>
                </div>
                <div class ="get-in-touch-card">
-                  <h3> Business Hours</h3>
-                  <p> Mon-Fri: 8AM-6PM EST <br> 24/7 Emergency suppport</p>
+                  <h3> Email </h3>
+                  <p>  <br> </p>
                </div>
                <div class ="get-in-touch-card">
-                  <h3> Business Hours</h3>
-                  <p> Mon-Fri: 8AM-6PM EST <br> 24/7 Emergency suppport</p>
+                  <h3> Offices </h3>
+                  <p> Honduras <br> Miami </p>
                </div>
                <div class ="get-in-touch-card">
                   <h3> Business Hours</h3>
