--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
 <!-- HERO SECTION-->
 <!-- HERO SECTION-->
+<div class="header-background">
+      
+
 <div class="header">
+
   <div class="logo">
     <h1 data-i18n="Title">Medical Supplies and More</h1>
   </div>
@@ -35,6 +39,7 @@
             </a>
          </div>
       </div>
+   </div>
       <!-- End of HERO SECTION-->
       <!-- SERVICES SECTION-->
       <div class ="services-section">
